# HW-21.2

./: .gitignore  main.py  package-lock.json  pyproject.toml
src/: catalog.html  category.html  contact.html  main.html  test.html
static/: style.css
